--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ https://templatemo.com/tm-578-first-portfolio
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
-                    <a class="custom-btn btn" href="#section_5">
-                        765-532-2780
+                    <a class="custom-btn btn" href="tel: 408-396-9570">
+                        408-396-9570
                     </a>
                 </div>
 
@@ -84,8 +84,8 @@ https://templatemo.com/tm-578-first-portfolio
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
                         <i class="navbar-icon bi-telephone-plus me-3"></i>
-                        <a class="custom-btn btn" href="#section_5" style="color: orange;">
-                            765-532-2780
+                        <a class="custom-btn btn" href="tel: 408-396-9570" style="color: orange;">
+                            408-396-9570
                         </a>
                     </div>
                 </div>
@@ -265,8 +265,8 @@ https://templatemo.com/tm-578-first-portfolio
                                     <strong class="site-footer-title d-block mt-4 mb-3">Call</strong>
 
                                     <p class="mb-0">
-                                        <a href="tel: 765-532-2780">
-                                            765-532-2780
+                                        <a href="tel: 408-396-9570">
+                                            408-396-9570
                                         </a>
                                     </p>
                                 </div>
